--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,10 +9,14 @@
   <body>
     <h1>Signed Front-End Uploads With S3/MinIO</h1>
 
-    <a href="{{ MINIO_CONSOLE_URL }}">MinIO Console</a>
+    <p>
+      <a href="{{ MINIO_CONSOLE_URL }}">MinIO Console</a>
+    </p>
 
-    <label for="file-input">Select file to upload</label>
-    <input id="file-input" type="file" />
+    <label for="file-input">File upload</label>
+    <div>
+      <input id="file-input" type="file" />
+    </div>
 
     <script src="s3-upload.js" type="module"></script>
   </body>
