--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,12 +10,16 @@
     <h1>Signed Front-End Uploads With S3/MinIO</h1>
 
     <p>
-      <a href="{{ MINIO_CONSOLE_URL }}">MinIO Console</a>
+      <a href="{{ MINIO_CONSOLE_URL }}">View the MinIO Console</a>
     </p>
 
     <label for="file-input">File upload</label>
     <div>
       <input id="file-input" type="file" />
+    </div>
+
+    <div id="result-container" style="max-width: 300px; margin-top: 20px">
+      <!-- Uploads and errors will be rendered here. -->
     </div>
 
     <script src="s3-upload.js" type="module"></script>
