--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,7 @@
     <h1>Signed Front-End Uploads With S3/MinIO</h1>
 
     <p>
-      <a href="{{ MINIO_CONSOLE_URL }}">View the MinIO Console</a>
+      <a href="%VITE_MINIO_CONSOLE_URL%">View the MinIO Console</a>
     </p>
 
     <label for="file-input">File upload</label>
@@ -22,6 +22,6 @@
       <!-- Uploads and errors will be rendered here. -->
     </div>
 
-    <script src="s3-upload.js" type="module"></script>
+    <script type="module" src="/s3-upload.js"></script>
   </body>
 </html>
