--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -24,7 +24,7 @@
       <main class="main">
         <div class="card">
           <h1 class="page-title">
-            <span class="page-title__top">Signed Front-End Uploads</span>
+            <span class="page-title__top"> Signed Frontend Uploads</span>
             <span class="page-title__bottom">with S3/MinIO</span>
           </h1>
 
